--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -16,7 +16,7 @@
 }
 
 window#waybar {
-    margin: 2px 5px;
+    margin: 1px 2px;
     background-color: rgba(43, 48, 59, 0.9);
     color: #e5e9f0;
     transition-property: background-color;
@@ -32,11 +32,11 @@ window#waybar.termite {
 }
 
 #workspaces {
-    margin-right: 15px;
+    margin: 0 7px 1px 2px;
 }
 
 #workspaces button {
-    margin-right: 2px;
+    margin-right: 1px;
     padding: 0 5px;
     background-color: #4c566a;
     color: #ffffff;
@@ -79,9 +79,10 @@ window#waybar.termite {
 #idle_inhibitor,
 #language,
 #mpd {
-    padding: 0 8px;
-    margin: 0;
+    padding: 0 8px;    margin: 0;
     margin-right: 1px;
+
+    margin: 0 1px 1px 0;
     border-radius: 3px;
 }
 
