--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -37,7 +37,7 @@ window#waybar.termite {
 
 #workspaces button {
     margin-right: 1px;
-    padding: 0 5px;
+    padding: 0 8px;
     background-color: #4c566a;
     color: #ffffff;
     border-radius: 3px;
@@ -79,7 +79,8 @@ window#waybar.termite {
 #idle_inhibitor,
 #language,
 #mpd {
-    padding: 0 8px;    margin: 0;
+    padding: 0 8px;
+    margin: 0;
     margin-right: 1px;
 
     margin: 0 1px 1px 0;
