--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,7 +1,7 @@
 * {
     border: none;
     border-radius: 0;
-    font-family: FontAwesome;
+    font-family: Font Awesome;
     font-size: 12px;
 }
 
@@ -18,6 +18,7 @@
 
 window#waybar {
     margin: 5px;
+    margin-bottom: 3px;
     background-color: rgba(43, 48, 59, 0.9);
     color: #e5e9f0;
     transition-property: background-color;
@@ -29,7 +30,7 @@ window#waybar.hidden {
 }
 
 window#waybar.termite {
-    background-color: #3F3F3F;
+    background-color: #3f3f3f;
 }
 
 #workspaces {
